--- a/DockerFile
+++ b/DockerFile
@@ -1,20 +1,29 @@
-# Use Node.js 16 base image
-FROM node:16
+# Stage 1: Build React application
+FROM node:16 AS build
 
-# Set the working directory inside the container
+# Set the working directory
 WORKDIR /app
 
-# Copy package.json and package-lock.json to the working directory
+# Copy package.json and package-lock.json
 COPY package*.json ./
 
 # Install dependencies
 RUN npm install
 
-# Copy the entire application to the container's working directory
+# Copy the rest of the application
 COPY . .
 
-# Expose the port that your application runs on
-EXPOSE 3000
+# Build the React app
+RUN npm run build
 
-# Start the React application
-CMD ["npm", "start"]
+# Stage 2: Serve the React app using Nginx
+FROM nginx:alpine
+
+# Copy the build output to Nginx's HTML directory
+COPY --from=build /app/build /usr/share/nginx/html
+
+# Expose port 80
+EXPOSE 80
+
+# Start Nginx server
+CMD ["nginx", "-g", "daemon off;"]
