--- a/DockerFile
+++ b/DockerFile
@@ -25,5 +25,5 @@ COPY --from=build /app/build /usr/share/nginx/html
 # Expose port 80
 EXPOSE 80
 
-# Start Nginx server
+# Start Nginx serverrr
 CMD ["nginx", "-g", "daemon off;"]
